feat: add basic styling

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,6 +2,8 @@
 ::before,
 ::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -9,4 +11,33 @@ body {
   margin: 0;
   padding: 0;
   width: 19rem;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+  gap: 1em;
+}
+
+.main__icon {
+  width: 5rem;
+  height: 5rem;
+}
+
+main h1 {
+  font-size: 1.5rem;
+}
+
+main button {
+  padding: 0.5em 1em;
+  font-size: 1rem;
+  color: white;
+  border: none;
+  border-radius: 0.5em;
+  cursor: pointer;
+  background: rgb(34,230,255);
+  background: linear-gradient(17deg, rgba(34,230,255,1) 0%, rgba(1,4,255,1) 100%);
 }
