--- a/popup/popup.css
+++ b/popup/popup.css
@@ -22,6 +22,33 @@ main {
   gap: 1em;
 }
 
+#scheduleForm {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75em;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+}
+
+.form-group label {
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
+.form-group input,
+.form-group select {
+  padding: 0.5em;
+  font-size: 0.875rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25em;
+  font-family: "Inter", sans-serif;
+}
+
 .main__icon {
   width: 5rem;
   height: 5rem;
